# PicoFET

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build_all_boards.sh  supported_boards.txt
.github/workflows/: release.yml
pico_sdk_static/: CMakeLists.txt
src/: cmd.c  cmd.h  comm.h  dev_pico.c  feta.c  feta.h  fetcore.h  j4w.c  jtag.c  jtaglib.c  jtaglib.h  jtdev.h  link.h  msp.c  ops.c  ops.h  phys.h  pico.c  picofet_proto.h  pinout.h  sbw.c  status.h  transport.h  tusb_config.h  usb_descriptors.c  util.h  version.h
