cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(PicoFET)

set(PIN_TCK "" CACHE STRING "TCK GPIO Pin Number")
set(PIN_TMS "" CACHE STRING "TMS GPIO Pin Number")
set(PIN_TST "" CACHE STRING "TST GPIO Pin Number")
set(PIN_RST "" CACHE STRING "RST GPIO Pin Number")
set(PIN_TDO "" CACHE STRING "TDO GPIO Pin Number")
set(PIN_TDI "" CACHE STRING "TDI GPIO Pin Number")

if(${PIN_TCK})
	add_compile_definitions(PIN_TCK=${PIN_TCK})
endif()
if(${PIN_TMS})
	add_compile_definitions(PIN_TMS=${PIN_TMS})
endif()
if(${PIN_TST})
	add_compile_definitions(PIN_TST=${PIN_TST})
endif()
if(${PIN_RST})
	add_compile_definitions(PIN_RST=${PIN_RST})
endif()
if(${PIN_TDO})
	add_compile_definitions(PIN_TDO=${PIN_TDO})
endif()
if(${PIN_TDI})
	add_compile_definitions(PIN_TDI=${PIN_TDI})
endif()

pico_sdk_init()

add_executable(PicoFET src/cmd.c src/jtaglib.c src/ops.c src/pico.c src/usb_descriptors.c)
target_compile_options(PicoFET PRIVATE -Wall -Wextra -Wpedantic)
target_link_libraries(PicoFET tinyusb_device_unmarked)
target_link_libraries(PicoFET pico_stdlib)
target_link_libraries(PicoFET pico_status_led)
target_link_libraries(PicoFET pico_unique_id)
target_include_directories(PicoFET PRIVATE ${PROJECT_SOURCE_DIR}/src)

#pico_enable_stdio_uart(PicoFET 0)
#pico_enable_stdio_usb(PicoFET 1)
